Archive/89292b3c2b8b2f3194471b7a8af31a77-0f732321323bad263acad699748475b5/output
+ clang++ -stdlib=libc++ -std=c++0x -O2 -lldd -Wall -pthread main.cpp
main.cpp:16:3: error: call to 'vector' is ambiguous
  vector<num>();
  ^~~~~~~~~~~
main.cpp:10:6: note: candidate function [with nd = 3, $1 = <>]
void vector() {}
     ^
main.cpp:12:6: note: candidate function [with nd = 3, $1 = <>]
void vector() {}
     ^
1 error generated.
